--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-	color: $p-color;
+	color: $color-black;
 	font-family: 'Oswald', sans-serif;
 	font-size: 1.4rem;
 	line-height: 2.4rem;
@@ -22,7 +22,7 @@ img {
 }
 
 p {
-	color: $par-color;
+	color: $color-light-grey;
 }
 
 ul {
