--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,5 +1,9 @@
-$p-color: #232323;
-$par-color: #8a8a8a;
-$header-bg-color: rgba(0, 0, 0, 0.5);
-$heading-color: #fff;
-$nav-bg-color: #d94545;
+$color-black: #232323;
+$color-light-grey: #8a8a8a;
+$color-black-rgba: rgba(0, 0, 0, 0.5);
+$color-white: #fff;
+$color-red: #d94545;
+$color-orange: #d96f45;
+$color-red-hover1: #f86d6d;
+$color-orange-hover2: #f88e6d;
+$color-red-focus: #ad3636;
