--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Oswald', sans-serif;
   font-size: 1.4rem;
   line-height: 2.4rem;
-  overflow: hidden; }
+  overflow-x: hidden; }
 
 img {
   display: block;
@@ -153,3 +153,56 @@ ul {
     background: #d94545; }
   .btn-lg {
     font-size: 2.6rem; }
+
+.about {
+  background-color: #ddd;
+  background-image: url("../../images/img/subsection-2.jpg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-areas: '. title title .' '. content-left content-right .' 'figures figures figures figures';
+  grid-template-columns: 25rem repeat(2, minmax(0, 1fr)) 25rem;
+  grid-template-rows: 20rem 1fr 20rem;
+  margin-top: 2rem;
+  width: 100%; }
+  .about__heading {
+    align-self: center;
+    color: #232323;
+    font-size: 6rem;
+    font-weight: 300;
+    grid-area: title;
+    justify-content: center;
+    text-align: center;
+    text-transform: uppercase; }
+    .about__heading__back, .about__heading__front {
+      display: block; }
+    .about__heading__back {
+      font-family: 'Playfair Display', sans-serif;
+      font-weight: bold;
+      line-height: 4rem;
+      opacity: 0.2;
+      text-transform: capitalize; }
+  .about__content-left {
+    font-size: 2.6rem;
+    grid-area: content-left;
+    line-height: 3.9rem; }
+    .about__content-left p {
+      color: #232323; }
+  .about__content-right {
+    grid-area: content-right; }
+  .about__figures {
+    display: grid;
+    grid-area: figures;
+    grid-template-columns: repeat(3, 20rem);
+    justify-content: space-evenly;
+    text-align: center; }
+  .about__figure-number {
+    font-size: 7rem;
+    font-weight: 300;
+    line-height: 5.6rem; }
+  .about__figure-text {
+    font-size: 2rem;
+    margin-top: 2rem;
+    text-transform: uppercase; }
