--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -6,38 +6,11 @@
 	background-size: cover;
 	display: grid;
 	grid-gap: 2rem;
-	grid-template-areas:
-		'. title title .'
-		'. content-left content-right .'
-		'figures figures figures figures';
+	grid-template-areas: '. title title .' '. content-left content-right .' 'figures figures figures figures';
 	grid-template-columns: 25rem repeat(2, minmax(0, 1fr)) 25rem;
 	grid-template-rows: 20rem 1fr 20rem;
 	margin-top: 2rem;
 	width: 100%;
-
-	&__heading {
-		align-self: center;
-		color: $color-black;
-		font-size: 6rem;
-		font-weight: 300;
-		grid-area: title;
-		justify-content: center;
-		text-align: center;
-		text-transform: uppercase;
-
-		&__back,
-		&__front {
-			display: block;
-		}
-
-		&__back {
-			font-family: 'Playfair Display', sans-serif;
-			font-weight: bold;
-			line-height: 4rem;
-			opacity: 0.2;
-			text-transform: capitalize;
-		}
-	}
 
 	&__content-left {
 		font-size: 2.6rem;
@@ -71,5 +44,29 @@
 		font-size: 2rem;
 		margin-top: 2rem;
 		text-transform: uppercase;
+	}
+}
+
+.section__heading {
+	align-self: center;
+	color: $color-black;
+	font-size: 6rem;
+	font-weight: 300;
+	grid-area: title;
+	justify-content: center;
+	text-align: center;
+	text-transform: uppercase;
+
+	&__back,
+	&__front {
+		display: block;
+	}
+
+	&__back {
+		font-family: 'Playfair Display', sans-serif;
+		font-weight: bold;
+		line-height: 4rem;
+		opacity: 0.2;
+		text-transform: capitalize;
 	}
 }
