--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,5 @@
 @import 'components/banner';
 @import 'components/about';
 @import 'components/menu';
+@import 'components/reservation';
+@import 'components/delivery';
