--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ ul {
 .nav-toggle {
   height: 10rem;
   opacity: 0;
+  position: fixed;
   width: 10rem;
   z-index: 99; }
   .nav-toggle:checked ~ .nav {
@@ -263,3 +264,41 @@ ul {
     font-style: italic;
     margin-top: 1rem;
     text-transform: capitalize; }
+
+.delivery {
+  display: grid;
+  grid-template-areas: 'title' '.' '.';
+  grid-template-rows: 20rem 1fr 10rem; }
+
+.section-heading {
+  grid-area: title; }
+
+.image-grid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 5vw); }
+  .image-grid img {
+    height: 100%;
+    object-fit: cover; }
+
+.img1 {
+  grid-column: span 2;
+  grid-row: span 2; }
+
+.img2 {
+  grid-column: span 2;
+  grid-row: span 3; }
+
+.img3 {
+  grid-column: span 2;
+  grid-row: span 4; }
+
+.img4 {
+  grid-column: span 2;
+  grid-row: span 4; }
+
+.img7,
+.img8 {
+  grid-column: span 2;
+  grid-row: span 2; }
