--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,49 @@ ul {
   grid-gap: 2rem;
   grid-template-columns: repeat(2, 5rem) 10rem 15rem;
   margin-top: 2rem; }
+
+.news {
+  display: grid;
+  grid-template-areas: 'title' '.' '.';
+  grid-template-rows: 20rem 1fr 10rem;
+  justify-content: center; }
+
+.section__heading {
+  grid-area: title; }
+
+.blog {
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(3, 1fr); }
+  .blog article {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    max-width: 35rem; }
+  .blog__body {
+    padding: 2rem; }
+  .blog__img {
+    position: relative; }
+  .blog__share-btn {
+    bottom: -20px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px; }
+  .blog__title {
+    font-size: 2.2rem;
+    line-height: 3.2rem;
+    margin-bottom: 1rem; }
+  .blog__desc {
+    color: #8a8a8a;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    margin-bottom: 1rem; }
+  .blog__second .blog__img {
+    grid-row: 2 / 3; }
+  .blog__second .blog__share-btn {
+    bottom: unset;
+    top: -20px; }
+
+.read-more {
+  color: #d94545;
+  text-decoration: none;
+  text-transform: uppercase; }
