Section contact done

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -8,4 +8,4 @@ $color-red-hover1: #f86d6d;
 $color-orange-hover2: #f88e6d;
 $color-red-focus: #ad3636;
 $color-light-grey: #ddd;
-$color-border: #cfcece;
+$color-border: #dedede;
