--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ ul {
     margin-right: 2rem; }
   .menu__item-line {
     align-self: center;
-    border-bottom: 2px dotted #cfcece;
+    border-bottom: 2px dotted #dedede;
     width: 100%; }
   .menu__item-title {
     font-size: 1.5rem;
@@ -364,3 +364,52 @@ ul {
   color: #d94545;
   text-decoration: none;
   text-transform: uppercase; }
+
+.contact {
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(2, 60rem);
+  grid-template-rows: 1fr 5rem;
+  justify-content: center; }
+
+.form {
+  border: 1px solid #dedede;
+  padding: 2rem 4rem;
+  text-align: center; }
+  .form h2 {
+    font-size: 2.6rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+    text-transform: uppercase; }
+
+fieldset {
+  border: 0; }
+
+legend {
+  color: #8a8a8a;
+  margin: 0 auto 3rem; }
+
+input,
+textarea {
+  border: 0;
+  border-bottom: 1px solid #dedede;
+  color: #8a8a8a;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.6rem;
+  padding: 1rem;
+  width: 100%; }
+
+label {
+  display: block;
+  margin-bottom: 1.5rem; }
+
+.contact-images {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30rem 25rem; }
+  .contact-images img {
+    height: 100%;
+    object-fit: cover; }
+    .contact-images img:first-child {
+      grid-column: span 2; }
